deployment/base/pact/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pact-deployment
  labels:
    app: pact
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pact
  template:
    metadata:
      labels:
        app: pact
    spec:
      containers:
        - name: pact
          image: pactfoundation/pact-broker:latest
          ports:
            - containerPort: 8080
              name: http
