deployment/base/pact/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pact
spec:
  selector:
    app: pact
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: service
