deployment/base/pact/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pact-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: pact.ok-cluster.azure.cloud.openknowledge.services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pact
                port:
                  number: 8080
